syntax = "proto3";
package go.grpc.server.consignment;
option go_package = "./;consignment";

service ShippingService {
  rpc CreateConsignment (CreateConsignmentReq) returns (CreateConsignmentRsp);
}

message CreateConsignmentReq {
  message container {
    string containerId = 1;
    string customerId = 2;
    string departure = 3;
    string userId = 4;
  }
  string consignmentId = 1;
  string consignmentDesc = 2;
  int32 consignmentWeight = 3;
  repeated container containers = 4;
  string vesselId = 5;
}
message CreateConsignmentRsp {
  bool created = 1;
  CreateConsignmentReq Consignment = 2;
}